AssignGit/src/objects/Preference__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preferences</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferenceName__c</fullName>
        <label>PreferenceName</label>
        <picklist>
            <picklistValues>
                <fullName>MSR activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_preference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>